fix: overlap on the 4th slide

--- a/assets/index.scss
+++ b/assets/index.scss
@@ -593,7 +593,7 @@ $slide-max-width: 1440px;
     height: 1063px;
     background-image: url(img/hexes/smart-house_hexes_4.png);
     right: 0;
-    bottom: 0;
+    bottom: -500px;
   }
 
   &--fifth {
